# Kiwi

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.cognee.yml  kiwi.cmd  kiwi.ps1  package.json  prd.md  pyproject.toml  requirements.txt  smoke_test.py
.claude/: settings.local.json
.github/workflows/: sentinel.yml
app/: agent_bridge.py  main.py  webhook_service.py
app/tests/: test_agent_endpoints.py  test_login_endpoints.py  test_webhook.py
docs/: commands.md  exploration_guide.md  subsystems.md  tools.md
docs/superpowers/plans/: 2026-07-02-sentinel.md  2026-07-03-sentinel-v2.md  (+2 more)
kiwi-ui/: index.tsx  package.json  pnpm-lock.yaml  tsconfig.json
scripts/: ci_runner.py  demo_dryrun.py  diagnose_cognee_llm.py
sentinel/: cli.py  cognee_client.py  config.py  ingest.py  kiwi_cli.py  lifecycle.py  llm_client.py  parser.py  reviewer.py  seed_data.jsonl  seed_loader.py  session_state.py  setup_wizard.py
sentinel/adapters/: junit.py
sentinel/agent/: loop.py  tools.py  types.py
tests/: conftest.py  test_cli.py  test_cognee_client.py  test_config.py  test_ingest.py  test_integration_agent_loop.py  test_integration_cloud.py  test_integration_selfhosted.py  test_junit_adapter.py  test_kiwi_cli.py  test_lifecycle.py  test_llm_client.py  test_parser.py  test_reviewer.py  test_seed_loader.py
tests/agent/: test_loop.py  test_provider_anthropic.py  test_provider_gemini.py  test_provider_openai.py  test_providers_init.py  test_tools.py  test_types.py
tests/fixtures/: multi_suite.xml  simple_failure.xml
viz/: graph_panel.py
(+8 files in other folders)
