[project]
name = "sentinel"
version = "0.1.0"
description = "CI memory layer + grounded QA reviewer on Cognee Cloud"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32",
    "python-dotenv>=1.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "anthropic>=0.40",
    "streamlit>=1.40",
    "pyvis>=0.3.2",
    "google-genai>=0.1.1",
    "rich>=13.7.0",
]



[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-mock>=3.14",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sentinel"]

[tool.pytest.ini_options]
testpaths = ["tests", "app/tests"]
addopts = "-m 'not integration'"
markers = ["integration: hits Cognee Cloud / external APIs; run explicitly"]
